housekeeping to remove: my_first_app.py nova_graph.py t_remind_update.py t_remind.csv

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 rasa.db
 events.db
+chats_analysis/dump.rdb
+chats_analysis/chats_log.csv
+chats_analsysi/chats_log.pdf
+chats_analysis/new_all.csv
+chats_analysis/entity_csp.csv
+chats_analysis/entity_csp.pdf
