--- a/data/rules.yml
+++ b/data/rules.yml
@@ -21,7 +21,7 @@ rules:
 - rule: check protocol after age protocol
   steps:
   - intent: age
-  - action: utter_protocol_submit
+  # - action: utter_protocol_submit
   - action: action_check_protocol
 - rule: Ask the user to rephrase whenever they send a message with low NLU confidence
   steps:
