--- a/domain.yml
+++ b/domain.yml
@@ -136,7 +136,7 @@ slots:
     influence_conversation: false
 responses:
   utter_greet:
-  - text: 你好。 我是阿斯利康的临床数字助手小易。很高兴为您服务
+  - text: 您好。 我是阿斯利康的临床数字助手小易。很高兴为您服务
   utter_cheer_up:
   - image: https://i.imgur.com/nGF1K8f.jpg
     text: 'Here is something to cheer you up:'
