--- a/endpoints.yml
+++ b/endpoints.yml
@@ -44,7 +44,7 @@ tracker_store:
    port: ${DCTA_REDIS_PORT}
    db: 0
    password: ${DCTA_REDIS_PWD}
-   use_ssl: false
+   use_ssl: true
 
 #tracker_store:
 #    type: mongod
