--- a/data/rules.yml
+++ b/data/rules.yml
@@ -28,7 +28,7 @@ rules:
 - rule: Ask the user to rephrase whenever they send a message with low NLU confidence
   steps:
   - intent: nlu_fallback
-  - action: action_write_text
+  # - action: action_write_text
   - action: utter_please_rephrase
 - rule: out-of-scope
   steps:
